--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -2,3 +2,6 @@ PreCommit:
   ShellCheck:
     enabled: true
     on_warn: fail
+    env:
+      # Disable shebang checking (as we modularize all functions to be one per file)
+      SHELLCHECK_OPTS: '-e SC2148'
